library-client-react-books: доработка сортировки - не работала в хроме + мелочи с названиями

--- a/library-client-react-books/public/index.html
+++ b/library-client-react-books/public/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css">
   <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.js"></script>
 
-  <title>Cats</title>
+  <title>BeSmart book list</title>
 </head>
 
 <body>
